<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<string name="app_name">ShareWithAll</string>
<string name="login_message">Enter your user and password to login at ShareWithAll Server:</string>
<string name="usernameLabel">Username:</string>
<string name="passwordLabel">Password:</string>
<string name="loginButtonText">Login</string>
<string name="createAccMenu">Create account</string>
<string name="optionsMenu">Preferences</string>
<string name="preferences">SWAPreferences</string>
<string name="createButtonText">Create account</string>
<string name="retryPassword">Re-enter the password:</string>
<string name="create_message">Enter an user and password to create a new account:</string>
<string name="userAndPassMinimum">Username and password must have 6 characters as minimum.</string>
<string name="loggingInMessage">Loggin in...</string>
<string name="passwordsNotMatch">Entered passwords do not match.</string>
<string name="creatingAccMessage">Creating account...</string>
<string name="createdSuccessful">Account created successfuly.</string>
<string name="logoutMenu">Logout</string>
<string name="loggingOutMessage">Logging out...</string>
<string name="clientPrefsCategory">Client preferences</string>
<string name="serverPrefsCategory">Server preferences</string>
<string name="optionDevicePublicTitle">Public</string>
<string name="optionDevicePublicSummary">Set checked to make public this device</string>
<string name="optionServerIPTitle">Server IP</string>
<string name="optionServerIPSummary">Set other ShareWithAll Server IP</string>
<string name="optionServerPortTitle">Server Port</string>
<string name="optionServerPortSummary">Set other ShareWithAll Server Port</string>
<string name="optionDeviceNameTitle">Device login name</string>
<string name="optionDeviceNameSummary">Set the login name of this device</string>
<string name="optionUsernameTitle">Username</string>
<string name="optionUsernameSummary">Set default username to login</string>
<string name="optionPasswordTitle">Password</string>
<string name="optionPasswordSummary">Set default password of default username</string>
<string name="optionAutologinTitle">Autologin</string>
<string name="optionAutologinSummary">Set checked to autologin at start</string>
<string name="ownClientsList">My clients</string>
<string name="friendsClientsList">My friends public clients</string>
<string name="gettingClientsList">Getting online clients list...</string>
<string name="friendsListMenu">Friends list</string>
<string name="friendsList">My friends</string>
<string name="gettingFriendsList">Getting friends list...</string>
<string name="resetDefaultMenu">Reset all options</string>
<string name="resetServerMenu">Reset server options</string>
<string name="resetClientMenu">Reset client options</string>
<string name="addFriendMenu">Add a friend</string>
<string name="clientListDialogTitle">Pick an action</string>
<string name="friendsListDialogTitle">Pick an action</string>
<string name="addFriendDialogTitle">Enter your friend name</string>
<string name="addFriendButton">Add</string>
<string name="friendsPrefsCategory">Friends list preferences</string>
<string name="showSendedInvTitle">Show sended invitations</string><string name="showSendedInvSummary">Show sended invitations on friends list</string>
<string name="showReceivedInvTitle">Show received invitations</string><string name="showReceivedInvSummary">Show received invitations on friends list</string>
<string name="showBlockedTitle">Show blocked friends</string><string name="showBlockedSummary">Show blocked friends on friends list</string>
<string name="resetFriendsMenu">Reset friends options</string>
<string name="chatWindow">Chat window</string>
<string name="chatButton">Send</string>
<string name="connectingWithClient">Connecting with client...</string>
</resources>
