<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/clientPrefsCategory">
    	<EditTextPreference
    			android:key="deviceNamePref"
    			android:title="@string/optionDeviceNameTitle"
    			android:summary="@string/optionDeviceNameSummary"/>
        <CheckBoxPreference
                android:key="isPublicPref"
                android:title="@string/optionDevicePublicTitle"
                android:summary="@string/optionDevicePublicSummary" />
    	<EditTextPreference
    			android:key="usernamePref"
    			android:title="@string/optionUsernameTitle"
    			android:summary="@string/optionUsernameSummary"/>
    	<EditTextPreference
    			android:key="passwordPref"
    			android:title="@string/optionPasswordTitle"
    			android:summary="@string/optionPasswordSummary"
    			android:dependency="usernamePref"
    			android:inputType="textPassword"/>
        <CheckBoxPreference
                android:key="autologinPref"
                android:title="@string/optionAutologinTitle"
                android:summary="@string/optionAutologinSummary"
    			android:dependency="passwordPref"/>
        <CheckBoxPreference
                android:key="autolaunchWebPref"
                android:title="@string/optionAutolaunchWebTittle"
                android:summary="@string/optionAutolaunchWebSummary"/>
        <CheckBoxPreference
                android:key="allowReceiveFilesPref"
                android:title="@string/optionAllowReceiveFilesTittle"
                android:summary="@string/optionAllowReceiveFilesSummary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/friendsPrefsCategory">
        <CheckBoxPreference
                android:key="showSendedInvPref"
                android:title="@string/showSendedInvTitle"
                android:summary="@string/showSendedInvSummary" />
        <CheckBoxPreference
                android:key="showReceivedInvPref"
                android:title="@string/showReceivedInvTitle"
                android:summary="@string/showReceivedInvSummary" />
        <CheckBoxPreference
                android:key="showBlockedPref"
                android:title="@string/showBlockedTitle"
                android:summary="@string/showBlockedSummary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/serverPrefsCategory">
    	<EditTextPreference
    			android:key="serverIPPref"
    			android:title="@string/optionServerIPTitle"
    			android:summary="@string/optionServerIPSummary"/>
    	<EditTextPreference
    			android:key="serverPortPref"
    			android:title="@string/optionServerPortTitle"
    			android:summary="@string/optionServerPortSummary"/>
    </PreferenceCategory>
</PreferenceScreen>