<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">
    <ImageView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dip"
	    android:layout_marginBottom="15dip"
    	android:src="@drawable/logo"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_message"
        android:gravity="center"/>
    <RelativeLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
	    android:layout_marginTop="15dip"
        android:gravity="center">
	    <TextView
	    	android:id="@+id/usernameLabelCreate"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/usernameLabel"/>
	    <EditText
	    	android:id="@+id/usernameEditCreate"
	        android:layout_width="200dip"
	        android:layout_height="45dip"
	        android:layout_below="@id/usernameLabelCreate"
	        android:layout_marginLeft="10dip"
	        android:background="@android:drawable/editbox_background"/>
	    <TextView
	    	android:id="@+id/passwordLabel1Create"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	        android:layout_below="@id/usernameEditCreate"
	        android:layout_alignLeft="@id/usernameLabelCreate"
	        android:layout_marginTop="15dip"
	    	android:text="@string/passwordLabel"/>
	    <EditText
	    	android:id="@+id/passwordEdit1Create"
	        android:layout_width="200dip"
	        android:layout_height="45dip"
	        android:layout_below="@id/passwordLabel1Create"
	        android:layout_alignLeft="@id/usernameEditCreate"
	        android:background="@android:drawable/editbox_background"
	        android:inputType="textPassword"/>
	    <TextView
	    	android:id="@+id/passwordLabel2Create"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	        android:layout_below="@id/passwordEdit1Create"
	        android:layout_alignLeft="@id/passwordLabel1Create"
	        android:layout_marginTop="15dip"
	    	android:text="@string/retryPassword"/>
	    <EditText
	    	android:id="@+id/passwordEdit2Create"
	        android:layout_width="200dip"
	        android:layout_height="45dip"
	        android:layout_below="@id/passwordLabel2Create"
	        android:layout_alignLeft="@id/passwordEdit1Create"
	        android:background="@android:drawable/editbox_background"
	        android:inputType="textPassword"/>
	</RelativeLayout>
	<Button
		android:id="@+id/createButton"
		android:layout_width="150dip"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dip"
		android:text="@string/createButtonText"/>
</LinearLayout>